# bazel-sandbox

./: .bazelrc  .clang-format  .eslintignore  .eslintrc  .gitignore  .prettier.config.js  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  babel.config.js  grpcwebproxy.BUILD.bazel  jest.config.js  package.json  rollup.config.js  storyshots.puppeteer.test.ts  tsconfig.json
.storybook/: main.ts  preview.ts
certs/: example-com.key
common/: BUILD.bazel
common/frontend/: BUILD.bazel  ErrorBoundary.tsx  RpcContext.ts
example/: BUILD.bazel  storyshots.puppeteer.test.ts
example/common/frontend/: BUILD.bazel  ErrorBoundary.tsx  RpcContext.ts
example/common/naming/proto/v1/: BUILD.bazel  naming.proto
example/common/naming/v1/: naming.proto
example/common/proto/naming/v1/: BUILD.bazel  naming.proto
example/frontend/: BUILD.bazel  index.html  index.tsx
example/name_generator/: BUILD.bazel
example/name_generator/frontend/: BUILD.bazel  NameGenerator.stories.tsx  NameGenerator.tsx
example/name_generator/frontend/__snapshots__/: NameGenerator.stories.storyshot
example/name_generator/proto/v1/: BUILD.bazel  name_generator.proto  name_generator_service.proto
example/name_generator/service/: BUILD.bazel  common.helpers.ts  index.ts  main.ts  name_generator.app.ts  name_generator.controller.ts
example/name_generator/src/: index.ts
example/name_generator/ui/: BUILD.bazel  NameGenerator.stories.tsx  NameGenerator.tsx  index.html  index.ts
example/name_generator/ui/__snapshots__/: NameGenerator.test.js.snap
example/name_generator/v1/: BUILD.bazel  name_generator.proto  name_generator_service.proto
example/services/name_generator/: BUILD.bazel  main.ts
example/services/name_generator/v1/: name_generator.proto  name_generator_service.proto
example/ui/: BUILD.bazel  index.tsx
patches/: @grpc+proto-loader+0.6.6.patch  ts-proto+1.83.3.patch
patches/bazel/: rules_proto.patch
patches/npm/: ts-proto+1.85.0.patch
tools/: grpcwebproxy.BUILD.bazel  jest.bzl
tools/certs/: BUILD.bazel  example-com.crt
tools/docker/bazel-puppeteer/: Dockerfile  entrypoint-wrapper.sh  script.sh
tools/docker/mongodb/: docker-compose.yml  setup.sh
tools/docker/puppeteer/: Dockerfile  script.sh
tools/eslint/: index.js  package.json
tools/grpcwebproxy/: BUILD.bazel  grpcwebproxy.sh
tools/ts-proto/: BUILD.bazel
trumid/frontend/: BUILD.bazel  index.html  index.tsx
trumid/list_trading/rfq/frontend/: BUILD.bazel  Rfqs.tsx
trumid/list_trading/rfq/proto/v1/: BUILD.bazel  rfq.proto  rfq_service.proto
trumid/list_trading/rfq/service/: BUILD.bazel  counterpartyQuoteMachine.ts  lineItemMachine.ts  main.ts  rfqMachine.ts
trumid/list_trading/rfq/service/src/: main.ts
trumid/list_trading/rfq/service/src/entity/: rfq.entity.ts
trumid/list_trading/rfq/service/src/machine/: counterparty-quote.machine.ts  line-item.machine.ts  rfq.machine.ts
