load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "helpers",
    srcs = ["helpers.ts"],
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@nestjs/microservices",
        "@npm//@types/lodash",
        "@npm//lodash",
    ],
)
