load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "error_boundary",
    srcs = ["ErrorBoundary.tsx"],
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types/react",
        "@npm//react",
    ],
)

ts_project(
    name = "rpc_context",
    srcs = ["RpcContext.ts"],
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@improbable-eng/grpc-web",
        "@npm//@types/react",
        "@npm//react",
        "@npm//rxjs",
    ],
)
