load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@npm//live-server:index.bzl", "live_server")
load("@npm//@bazel/esbuild:index.bzl", "esbuild")

ts_project(
    name = "index_ts",
    srcs = glob(
        ["**/*.tsx"],
        exclude = ["**/*.stories.tsx"],
    ),
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "//example/common/frontend:error_boundary",
        "//example/common/frontend:rpc_context",
        "//example/name_generator/frontend",
    ],
)

esbuild(
    name = "bundle",
    entry_point = "index.tsx",
    link_workspace_root = True,
    # Might need some combination of these to enable chunking
    # output_dir = True,
    # splitting = True,
    deps = [
        ":index_ts",
    ],
)

live_server(
    name = "frontend",
    data = [
        "index.html",
        ":bundle",
    ],
    templated_args = [
        "./example/frontend",
        "--entry-file=index.html",
        "--mount=/bundle.js:example/frontend/bundle/bundle.js",
        "--no-browser",
    ],
)
