load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@npm//live-server:index.bzl", "live_server")

ts_project(
    name = "index_ts",
    srcs = glob(
        ["**/*.tsx"],
        exclude = ["**/*.stories.tsx"],
    ),
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "//common/frontend:error_boundary",
        "//common/frontend:rpc_context",
        "//example/name_generator/frontend",
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//react",
        "@npm//react-dom",
    ],
)

rollup_bundle(
    name = "bundle",
    config_file = "//:rollup.config.js",
    entry_point = "index.js",
    format = "iife",
    deps = [
        ":index_ts",
        "@npm//@rollup/plugin-alias",
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-node-resolve",
        "@npm//@rollup/plugin-replace",
    ],
)

live_server(
    name = "frontend",
    data = [
        "index.html",
        ":bundle",
    ],
    templated_args = [
        "./example/frontend",
        "--entry-file=index.html",
        "--mount=/bundle.js:example/frontend/bundle/bundle.js",
        "--no-browser",
    ],
)
