load("@npm//@bazel/typescript:index.bzl", "ts_project")

ts_project(
    name = "error_boundary",
    srcs = ["ErrorBoundary.tsx"],
    declaration = True,
    tsconfig = "//:tsconfig.json",
    visibility = ["//example:__subpackages__"],
    deps = [
        "@npm//@types/react",
        # "@npm//@types/react-dom",
        "@npm//react",
        # "@npm//react-dom",
    ],
)
