load("@npm//@bazel/typescript:index.bzl", "ts_project")

ts_project(
    name = "error_boundary",
    srcs = ["ErrorBoundary.tsx"],
    declaration = True,
    tsconfig = "//:tsconfig.json",
    visibility = ["//example:__subpackages__"],
    deps = [
        "@npm//@types/react",
        "@npm//react",
    ],
)

ts_project(
    name = "rpc_context",
    srcs = ["RpcContext.ts"],
    declaration = True,
    tsconfig = "//:tsconfig.json",
    visibility = ["//example:__subpackages__"],
    deps = [
        "@npm//@improbable-eng/grpc-web",
        "@npm//@types/react",
        "@npm//react",
        "@npm//rxjs",
    ],
)
