load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin", "npm_package_bin")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("//:tools/jest.bzl", "jest_test")

ts_project(
    name = "frontend",
    srcs = glob(
        ["**/*.tsx"],
        exclude = ["**/*.stories.tsx"],
    ),
    declaration = True,
    tsconfig = "//:tsconfig.json",
    visibility = ["//example:__subpackages__"],
    deps = [
        "//example/name_generator/proto/v1:name_generator_ts_proto_web",
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//react",
        "@npm//react-dom",
    ],
)

copy_to_bin(
    name = "stories",
    srcs = glob(["**/*.stories.tsx"]),
)

npm_package_bin(
    name = "storybook",
    args = [
        "--config-dir bazel-out/k8-fastbuild/bin/.storybook",
        "--output-dir bazel-out/k8-fastbuild/bin/storybook-static",
    ],
    data = [
        ":frontend",
        ":stories",
        "//:storybook_data_copy",
        "//:tsconfig.json",
        "@npm//tsconfig-paths-webpack-plugin",
    ],
    output_dir = True,
    tool = "@npm//@storybook/react/bin:build-storybook",
)

jest_test(
    name = "storyshots",
    srcs = [
        # "//example:storyshots.puppeteer.test.ts",
        "//example:storyshots.test.ts",
    ],
    data = [
        # ":storybook",
        ":frontend",
        "//:.storybook",
        "//:babel.config.js",
        "//:package.json",
        "@npm//@storybook/addon-storyshots",
        "@npm//@storybook/addon-storyshots-puppeteer",
        "@npm//@storybook/react",
        "@npm//tsconfig-paths-webpack-plugin",
    ] + glob([
        "**/*.stories.tsx",
        "**/__image_snapshots__/*.png",
        "**/__snapshots__/*.storyshot",
    ]),
)
