load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

PORT = 50051

ts_project(
    name = "main",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.test.ts"],
    ),
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "//example/common/proto/naming/v1:example_common_proto_naming_v1_ts_proto",
        "//example/name_generator/proto/v1:example_name_generator_proto_v1_ts_proto",
        "@npm//@types/faker",
        "@npm//@types/yargs",
        "@npm//faker",
        "@npm//rxjs",
        "@npm//yargs",
    ],
)

nodejs_binary(
    name = "service",
    args = ["--bazel_patch_module_resolver"],
    data = [":main"],
    entry_point = ":main.ts",
    templated_args = ["--port={}".format(PORT)],
)

sh_binary(
    name = "grpcwebproxy",
    srcs = ["//tools/grpcwebproxy:grpcwebproxy.sh"],
    args = [
        "--allow_all_origins",
        "--backend_addr=127.0.0.1:{}".format(PORT),
        "--backend_tls_noverify",
        "--run_http_server=false",
        "--server_http_max_write_timeout=24h",
        "--server_tls_cert_file=./tools/certs/example-com.crt",
        "--server_tls_key_file=./tools/certs/example-com.key",
    ],
    data = [
        "//tools/certs:example_com_tls",
        "//tools/grpcwebproxy:grpcwebproxy-v0.14.1-linux-x86_64",
        "//tools/grpcwebproxy:grpcwebproxy-v0.14.1-osx-x86_64",
    ],
)
