load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("//:tools/jest.bzl", "jest_test")

ts_project(
    name = "ui",
    srcs = glob(
        ["**/*.tsx"],
        exclude = ["**/*.stories.tsx"],
    ),
    declaration = True,
    tsconfig = "//:tsconfig.json",
    visibility = ["//example:__subpackages__"],
    deps = [
        "//example/name_generator/proto/v1:web_lib",
        "@npm//@types/google-protobuf",
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//google-protobuf",
        "@npm//grpc-web",
        "@npm//react",
        "@npm//react-dom",
    ],
)

jest_test(
    name = "storyshots",
    srcs = glob(["**/*.test.ts"]),
    data = [
        ":ui",
        "//:.storybook",
        "//:babel.config.js",
        "@npm//@storybook/addon-storyshots",
        "@npm//@storybook/react",
        "@npm//tsconfig-paths-webpack-plugin",
    ] + glob(["**/*.stories.tsx"]) + glob(["**/__snapshots__/*.snap"]),
)
