load("@build_bazel_rules_nodejs//:index.bzl", "npm_package_bin")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("//:tools/jest.bzl", "jest_test")

ts_project(
    name = "ui",
    srcs = glob(
        ["**/*.tsx"],
        exclude = ["**/*.stories.tsx"],
    ),
    declaration = True,
    tsconfig = "//:tsconfig.json",
    visibility = ["//example:__subpackages__"],
    deps = [
        "//example/name_generator/proto/v1:web_lib",
        "@npm//@types/google-protobuf",
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//google-protobuf",
        "@npm//grpc-web",
        "@npm//react",
        "@npm//react-dom",
    ],
)

npm_package_bin(
    name = "storybook",
    data = [
        ":ui",
        "//:.storybook",
        "//:package.json",
        "//:tsconfig.json",
        "@npm//tsconfig-paths-webpack-plugin",
    ] + glob(["**/*.stories.tsx"]),
    output_dir = True,
    tool = "@npm//@storybook/react/bin:build-storybook",
)

jest_test(
    name = "storyshots",
    srcs = [
        # "//example:storyshots.puppeteer.test.ts",
        "//example:storyshots.test.ts",
    ],
    data = [
        # ":storybook",
        ":ui",
        "//:.storybook",
        "//:babel.config.js",
        "//:package.json",
        "@npm//@storybook/addon-storyshots",
        "@npm//@storybook/addon-storyshots-puppeteer",
        "@npm//@storybook/react",
        "@npm//tsconfig-paths-webpack-plugin",
    ] + glob([
        "**/*.stories.tsx",
        "**/__image_snapshots__/*.png",
        "**/__snapshots__/*.storyshot",
    ]),
)
