load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin", "npm_package_bin")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("//:tools/jest.bzl", "jest_test")

ts_project(
    name = "ui",
    srcs = glob(
        ["**/*.tsx"],
        exclude = ["**/*.stories.tsx"],
    ),
    declaration = True,
    tsconfig = "//:tsconfig.json",
    visibility = ["//example:__subpackages__"],
    deps = [
        "//example/name_generator/proto/v1:web_lib",
        "@npm//@types/google-protobuf",
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//google-protobuf",
        "@npm//grpc-web",
        "@npm//react",
        "@npm//react-dom",
    ],
)

copy_to_bin(
    name = "stories",
    srcs = glob(["**/*.stories.tsx"]),
)

npm_package_bin(
    name = "storybook",
    args = [
        "--config-dir bazel-out/k8-fastbuild/bin/.storybook",
        "--output-dir bazel-out/k8-fastbuild/bin/storybook-static",
    ],
    data = [
        ":stories",
        ":ui",
        "//:storybook_data_copy",
        "//:tsconfig.json",
        "@npm//tsconfig-paths-webpack-plugin",
    ],
    output_dir = True,
    tool = "@npm//@storybook/react/bin:build-storybook",
)

jest_test(
    name = "storyshots",
    srcs = [
        # "//example:storyshots.puppeteer.test.ts",
        "//example:storyshots.test.ts",
    ],
    data = [
        # ":storybook",
        ":ui",
        "//:.storybook",
        "//:babel.config.js",
        "//:package.json",
        "@npm//@storybook/addon-storyshots",
        "@npm//@storybook/addon-storyshots-puppeteer",
        "@npm//@storybook/react",
        "@npm//tsconfig-paths-webpack-plugin",
    ] + glob([
        "**/*.stories.tsx",
        "**/__image_snapshots__/*.png",
        "**/__snapshots__/*.storyshot",
    ]),
)
