load("@rules_proto//proto:defs.bzl", "proto_library")
load("@build_stack_rules_proto//rules/ts:proto_ts_library.bzl", "proto_ts_library")
load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")

package(default_visibility = ["//example:__subpackages__"])

proto_library(
    name = "example_name_generator_proto_v1_proto",
    srcs = [
        "name_generator.proto",
        "name_generator_service.proto",
    ],
    deps = ["//example/common/naming/proto/v1:example_common_naming_proto_v1_proto"],
)

proto_compile(
    name = "example_name_generator_proto_v1_ts_proto_compile",
    options = {"//tools/ts-proto:protoc-gen-ts-proto": [
        "emitImportedFiles=false",
        "esModuleInterop=true",
        "oneof=unions",
        "outputClientImpl=grpc-web",
        "outputServices=grpc-js",
        "stringEnums=true",
        "useOptionals=true",
    ]},
    outputs = [
        "name_generator.ts",
        "name_generator_service.ts",
        "name_generator_service_web.ts",
    ],
    plugins = ["//tools/ts-proto:protoc-gen-ts-proto"],
    proto = "example_name_generator_proto_v1_proto",
)

proto_ts_library(
    name = "example_name_generator_proto_v1_ts_proto",
    srcs = [
        "name_generator.ts",
        "name_generator_service.ts",
        "name_generator_service_web.ts",
    ],
    args = [
        "--esModuleInterop",
        "--lib ES2015,DOM",
    ],
    tsc = "@npm//typescript/bin:tsc",
    deps = [
        "//example/common/naming/proto/v1:example_common_naming_proto_v1_ts_proto",
        "@npm//@grpc/grpc-js",
        "@npm//@improbable-eng/grpc-web",
        "@npm//long",
        "@npm//protobufjs",
    ],
)
