load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

ts_project(
    name = "main",
    srcs = glob(
        ["src/**/*.ts"],
        exclude = ["src/**/*.test.ts"],
    ),
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "//trumid/list_trading/rfq/proto/v1:trumid_list_trading_rfq_proto_v1_ts_proto",
        "@npm//typeorm",
        "@npm//xstate",
    ],
)

nodejs_binary(
    name = "service",
    args = ["--bazel_patch_module_resolver"],
    data = [":main"],
    entry_point = ":src/main.ts",
)
