load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")
load("@build_stack_rules_proto//rules/ts:ts_proto_library.bzl", "ts_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//example:__subpackages__"])

proto_library(
    name = "example_common_naming_proto_v1_proto",
    srcs = ["naming.proto"],
)

proto_compile(
    name = "example_common_naming_proto_v1_ts_proto_compile",
    options = {"@build_stack_rules_proto//plugin/stephenh/ts-proto:protoc-gen-ts-proto": [
        "emitImportedFiles=false",
        "esModuleInterop=true",
        "oneof=unions",
        "outputServices=grpc-js",
        "stringEnums=true",
        "useOptionals=true",
    ]},
    outputs = ["naming.ts"],
    plugins = ["@build_stack_rules_proto//plugin/stephenh/ts-proto:protoc-gen-ts-proto"],
    proto = "example_common_naming_proto_v1_proto",
)

ts_proto_library(
    name = "example_common_naming_proto_v1_ts_proto",
    srcs = [":example_common_naming_proto_v1_ts_proto_compile"],
    deps = ["@npm//rxjs"],
)
